{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 136,
  "lineage": "19643d14-2615-057c-1ee3-23ce052250a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b43752b2de167483",
            "domain": "vpc",
            "id": "eipalloc-05e2c36860bd48af6",
            "network_interface": "eni-0b9a1b51fc6dc0b6d",
            "private_dns": "ip-10-0-0-74.ec2.internal",
            "private_ip": "10.0.0.74",
            "public_dns": "ec2-35-169-11-101.compute-1.amazonaws.com",
            "public_ip": "35.169.11.101",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09f8969a153da6075",
            "owner_id": "062200478089",
            "tags": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0b6cd84125d9ee60a"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e2c36860bd48af6",
            "id": "nat-01bc817cb0dfa6b20",
            "network_interface_id": "eni-0b9a1b51fc6dc0b6d",
            "private_ip": "10.0.0.74",
            "public_ip": "35.169.11.101",
            "subnet_id": "subnet-02815de86973e39fa",
            "tags": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-058f4d19a17dd8a7f",
            "owner_id": "062200478089",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-01bc817cb0dfa6b20",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "vpc_id": "vpc-0b6cd84125d9ee60a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0814aa24cd608acca",
            "owner_id": "062200478089",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f8969a153da6075",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "vpc_id": "vpc-0b6cd84125d9ee60a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c37be1edb6c810a3",
            "route_table_id": "rtb-058f4d19a17dd8a7f",
            "subnet_id": "subnet-098af65e6ea6b2c12"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2077ba0cb631348",
            "route_table_id": "rtb-0814aa24cd608acca",
            "subnet_id": "subnet-02815de86973e39fa"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062200478089:subnet/subnet-098af65e6ea6b2c12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.128/25",
            "id": "subnet-098af65e6ea6b2c12",
            "map_public_ip_on_launch": false,
            "owner_id": "062200478089",
            "tags": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0b6cd84125d9ee60a"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062200478089:subnet/subnet-02815de86973e39fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/25",
            "id": "subnet-02815de86973e39fa",
            "map_public_ip_on_launch": false,
            "owner_id": "062200478089",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0b6cd84125d9ee60a"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062200478089:vpc/vpc-0b6cd84125d9ee60a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-05c4d33c45a9be4e7",
            "default_route_table_id": "rtb-0c41f13ca385123c7",
            "default_security_group_id": "sg-0d10f64aca328cbac",
            "dhcp_options_id": "dopt-740e4e11",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b6cd84125d9ee60a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c41f13ca385123c7",
            "owner_id": "062200478089",
            "tags": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}